tests/snapshots/transcript__baseline-32.snap
---
source: tests/transcript.rs
expression: "rendered(BASELINE, 32)"
---
▎ you
▎ read the grid scanner back to
▎ me

▎ claude · opus-5
▎ thinking · 1 line
▎ The grid scanner walks one
▎ cell row at a time into a
▎ reused buffer.
▎
▎ ▸ Bash
▎   └ wc -l src/engine/grid.rs
▎ ▸ Agent                      ⏎
▎   └ Explore · Trace the grid …
▎ ▸ Bash
▎   └ cargo build -v 2>&1
▎ ▸ Read
▎   └ src/engine/grid.rs · 212 …
▎
▎ Two hundred and twelve lines,
▎ and no serde_json anywhere in
▎ it.
▎
▎ ▸ Agent                      ⏎
▎   └ code-review · Review the …

▎ ──────────────────────────────
▎ 1 forked skill ran with no sp…
▎ ▸ code-review                ⏎
▎   └ Review the grid scanner
