tests/snapshots/transcript__baseline-40.snap
---
source: tests/transcript.rs
expression: "rendered(BASELINE, 40)"
---
▎ you
▎ read the grid scanner back to me

▎ claude · opus-5
▎ thinking · 1 line
▎ The grid scanner walks one cell row at
▎ a time into a reused buffer.
▎
▎ ▸ Bash                              ok
▎   └ wc -l src/engine/grid.rs
▎ ▸ Agent                         ⏎   ok
▎   └ Explore · Trace the grid scanner
▎ ▸ Bash                              ok
▎   └ cargo build -v 2>&1
▎ ▸ Read                              ok
▎   └ /Users/fixture/Developer/holodeck…
▎
▎ Two hundred and twelve lines, and no
▎ serde_json anywhere in it.
▎
▎ ▸ Agent                         ⏎   ok
▎   └ code-review · Review the grid sca…

▎ ──────────────────────────────────────
▎ 1 forked skill ran with no spawning c…
▎ ▸ code-review                   ⏎   ok
▎   └ Review the grid scanner
