tests/snapshots/transcript__baseline-80.snap
---
source: tests/transcript.rs
expression: "rendered(BASELINE, 80)"
---
▎ you
▎ read the grid scanner back to me

▎ claude · opus-5
▎ thinking · 1 line
▎ The grid scanner walks one cell row at a time into a reused buffer.
▎
▎ ▸ Bash  {"command":"wc -l src/engine/grid.rs","description":"Count the scanne…
▎
▎ ▸ Agent  {"description":"Trace the grid scanner","prompt":"Find every caller …
▎
▎ ▸ Bash  {"command":"cargo build -v 2>&1","description":"Verbose build"}
▎
▎ ▸ Read  {"file_path":"/Users/fixture/Developer/holodeck/src/engine/grid.rs"}
▎
▎ Two hundred and twelve lines, and no serde_json anywhere in it.
