tests/snapshots/transcript__compacted-32.snap
---
source: tests/transcript.rs
expression: "rendered(COMPACTED, 32)"
---
▎ you
▎ walk me through the interlock
▎ cache invalidation

▎ claude · opus-5
▎ It keys off the shard mtime
▎ and the file length.

▎ you
▎ and when the length matches
▎ but the bytes changed?

▎ claude · opus-5
▎ Then the shard is stale and
▎ nothing notices.

▎ compacted · 948k → 124k token…

▎ summary
▎ This session is continued from
▎ a previous conversation that
▎ ran out of context. The work
▎ so far: the interlock cache
▎ keys off shard mtime and file
▎ length, which misses a
▎ same-length edit.

▎ you
▎ so add a content hash

▎ claude · opus-5
▎ A hash of the first and last 4
▎ KiB is enough.

▎ ────────── cleared ───────────

▎ you
▎ different subject entirely:
▎ the holodeck arch

▎ claude · opus-5
▎ The arch merge folds the base
▎ in the wrong direction.
