tests/snapshots/transcript__injections-80.snap
---
source: tests/transcript.rs
expression: "revealed(BASELINE, 80)"
---
▎ you
▎ read the grid scanner back to me
▎ · 5 injections · date, instructions, total_tokens_reminder +1

▎ claude · opus-5
▎ thinking · 1 line
▎ The grid scanner walks one cell row at a time into a reused buffer.
▎
▎ ▸ Bash
▎   └ wc -l src/engine/grid.rs
▎ ▸ Agent                                                                      ⏎
▎   └ Explore · Trace the grid scanner
▎ · 1 injection · queued_command
▎
▎ ▸ Bash
▎   └ cargo build -v 2>&1
▎ ▸ Read
▎   └ src/engine/grid.rs · 212 lines
▎
▎ Two hundred and twelve lines, and no serde_json anywhere in it.
▎
▎ ▸ Agent                                                                      ⏎
▎   └ code-review · Review the grid scanner

▎ ──────────────────────────────────────────────────────────────────────────────
▎ 1 forked skill ran with no spawning call
▎ ▸ code-review                                                                ⏎
▎   └ Review the grid scanner
